[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Alex Angelico <alex.angelico@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.25.1"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
